--- a/src/app/pages/main/manager-tickets/manager-tickets.page.scss
+++ b/src/app/pages/main/manager-tickets/manager-tickets.page.scss
@@ -25,15 +25,15 @@
 }
 
 .stat-card.total {
-  --background: #e3f2fd;
+  --background: #adb4d4;
 }
 
 .stat-card.abiertos {
-  --background: #fff3e0;
+  --background: #adb4d4;
 }
 
 .stat-card.cerrados {
-  --background: #e8f5e8;
+  --background: #adb4d4;
 }
 
 .loading, .empty-state {
